--- a/config/quality/detekt.yml
+++ b/config/quality/detekt.yml
@@ -33,7 +33,16 @@ console-reports:
 
 comments:
   active: true
-  excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+  excludes: [
+    '**/test/**',
+    '**/spekTest/**',
+    '**/integrationTest/**',
+    '**/robolectricTest/**',
+    '**/androidTest/**',
+    '**/*.Test.kt',
+    '**/*.Spec.kt',
+    '**/*.Spek.kt'
+  ]
   AbsentOrWrongFileLicense:
     active: false
     licenseTemplateFile: 'license.template'
@@ -71,10 +80,20 @@ complexity:
     ignoreSingleWhenExpression: false
     ignoreSimpleWhenEntries: false
     ignoreNestingFunctions: false
-    nestingFunctions: run,let,apply,with,also,use,forEach,isNotNull,ifNull
+    nestingFunctions: [
+      run,
+      let,
+      apply,
+      with,
+      also,
+      use,
+      forEach,
+      isNotNull,
+      ifNull
+    ]
   LabeledExpression:
     active: true
-    ignoredLabels: ''
+    ignoredLabels: []
   LargeClass:
     active: true
     threshold: 600
@@ -87,6 +106,7 @@ complexity:
     constructorThreshold: 7
     ignoreDefaultParameters: false
     ignoreDataClasses: true
+    ignoreAnnotated: []
   MethodOverloading:
     active: true
     threshold: 6
@@ -95,14 +115,32 @@ complexity:
     threshold: 4
   StringLiteralDuplication:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     threshold: 3
     ignoreAnnotation: true
     excludeStringsWithLessThan5Characters: true
     ignoreStringsRegex: '$^'
   TooManyFunctions:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     thresholdInFiles: 11
     thresholdInClasses: 11
     thresholdInInterfaces: 11
@@ -158,10 +196,24 @@ exceptions:
   active: true
   ExceptionRaisedInUnexpectedLocation:
     active: true
-    methodNames: 'toString,hashCode,equals,finalize'
+    methodNames: [
+      toString,
+      hashCode,
+      equals,
+      finalize
+    ]
   InstanceOfCheckForException:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
   NotImplementedDeclaration:
     active: true
   PrintStackTrace:
@@ -173,7 +225,11 @@ exceptions:
     ignoreLabeled: false
   SwallowedException:
     active: true
-    ignoredExceptionTypes: 'InterruptedException,NumberFormatException,ParseException,MalformedURLException'
+    ignoredExceptionTypes:
+      - InterruptedException
+      - NumberFormatException
+      - ParseException
+      - MalformedURLException
     allowedExceptionNameRegex: '^(_|(ignore|expected).*)'
   ThrowingExceptionFromFinally:
     active: true
@@ -181,29 +237,41 @@ exceptions:
     active: true
   ThrowingExceptionsWithoutMessageOrCause:
     active: true
-    exceptions: 'IllegalArgumentException,IllegalStateException,IOException'
+    exceptions:
+      - IllegalArgumentException
+      - IllegalStateException
+      - IOException'
   ThrowingNewInstanceOfSameException:
     active: true
   TooGenericExceptionCaught:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     exceptionNames:
-     - ArrayIndexOutOfBoundsException
-     - Error
-     - Exception
-     - IllegalMonitorStateException
-     - NullPointerException
-     - IndexOutOfBoundsException
-     - RuntimeException
-     - Throwable
+      - ArrayIndexOutOfBoundsException
+      - Error
+      - Exception
+      - IllegalMonitorStateException
+      - NullPointerException
+      - IndexOutOfBoundsException
+      - RuntimeException
+      - Throwable
     allowedExceptionNameRegex: '^(_|(ignore|expected).*)'
   TooGenericExceptionThrown:
     active: true
     exceptionNames:
-     - Error
-     - Exception
-     - Throwable
-     - RuntimeException
+      - Error
+      - Exception
+      - Throwable
+      - RuntimeException
 
 formatting:
   active: true
@@ -318,40 +386,112 @@ naming:
   active: true
   ClassNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     classPattern: '[A-Z$][a-zA-Z0-9$]*'
   ConstructorParameterNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     parameterPattern: '[a-z][A-Za-z0-9]*'
     privateParameterPattern: '[a-z][A-Za-z0-9]*'
     excludeClassPattern: '.*Raw'
     ignoreOverridden: true
   EnumNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     enumEntryPattern: '^[A-Z][_a-zA-Z0-9]*'
   ForbiddenClassName:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
-    forbiddenName: ''
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
+    forbiddenName: []
   FunctionMaxLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     maximumFunctionNameLength: 30
   FunctionMinLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     minimumFunctionNameLength: 3
   FunctionNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     functionPattern: '^([a-z$][a-zA-Z$0-9]*)|(`.*`)$'
     excludeClassPattern: '$^'
     ignoreOverridden: true
   FunctionParameterNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     parameterPattern: '[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
     ignoreOverridden: true
@@ -366,31 +506,85 @@ naming:
     ignoreOverridden: true
   ObjectPropertyNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     constantPattern: '[A-Za-z][_A-Za-z0-9]*'
     propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
     privatePropertyPattern: '(_)?[A-Za-z][_A-Za-z0-9]*'
   PackageNaming:
     active: false
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     packagePattern: '^[a-z]+(\.[a-z][A-Za-z0-9]*)*$'
   TopLevelPropertyNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     constantPattern: '[A-Z][_A-Z0-9]*'
     propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
     privatePropertyPattern: '_?[A-Za-z][_A-Za-z0-9]*'
   VariableMaxLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     maximumVariableNameLength: 64
   VariableMinLength:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     minimumVariableNameLength: 1
   VariableNaming:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
     variablePattern: '[a-z][A-Za-z0-9]*'
     privateVariablePattern: '(_)?[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
@@ -402,10 +596,28 @@ performance:
     active: true
   ForEachOnRange:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
   SpreadOperator:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
   UnnecessaryTemporaryInstantiation:
     active: true
 
@@ -433,8 +645,17 @@ potential-bugs:
     active: true
   LateinitUsage:
     active: true
-    excludes: ''
-    excludeAnnotatedProperties: ''
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
+    excludeAnnotatedProperties: []
     ignoreOnClassesPattern: ''
   MapGetWithNotNullAssertionOperator:
     active: true
@@ -443,6 +664,10 @@ potential-bugs:
   RedundantElseInWhen:
     active: true
   UnconditionalJumpStatementInLoop:
+    active: true
+  UnnecessaryNotNullOperator:
+    active: true
+  UnnecessarySafeCall:
     active: true
   UnreachableCode:
     active: true
@@ -477,18 +702,25 @@ style:
     includeLineWrapping: false
   ForbiddenComment:
     active: true
-    values: 'TODO:,FIXME:,STOPSHIP:'
+    values: [
+      'TODO:',
+      'FIXME:',
+      'STOPSHIP:'
+    ]
     allowedPatterns: ''
   ForbiddenImport:
     active: true
-    imports: ''
+    imports: []
     forbiddenPatterns: ''
   ForbiddenMethodCall:
     active: true
-    methods: ''
+    methods: []
   ForbiddenPublicDataClass:
     active: true
-    ignorePackages: '*.internal,*.internal.*'
+    ignorePackages: [
+      '*.internal',
+      '*.internal.*'
+    ]
   ForbiddenVoid:
     active: true
     ignoreOverridden: false
@@ -497,7 +729,9 @@ style:
     active: true
     ignoreOverridableFunction: true
     excludedFunctions: 'describeContents'
-    excludeAnnotatedFunction: 'dagger.Provides'
+    excludeAnnotatedFunction: [
+      'dagger.Provides'
+    ]
   LibraryCodeMustSpecifyReturnType:
     active: true
   LoopWithTooManyJumpStatements:
@@ -505,8 +739,22 @@ style:
     maxJumpCount: 1
   MagicNumber:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
-    ignoreNumbers: '-1,0,1,2'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
+    ignoreNumbers: [
+      '-1',
+      '0',
+      '1',
+      '2'
+    ]
     ignoreHashCodeFunction: true
     ignorePropertyDeclaration: false
     ignoreLocalVariableDeclaration: false
@@ -571,7 +819,9 @@ style:
     acceptableDecimalLength: 5
   UnnecessaryAbstractClass:
     active: true
-    excludeAnnotatedClasses: 'dagger.Module'
+    excludeAnnotatedClasses: [
+      'dagger.Module'
+    ]
   UnnecessaryAnnotationUseSiteTarget:
     active: true
   UnnecessaryApply:
@@ -597,7 +847,7 @@ style:
     active: true
   UseDataClass:
     active: true
-    excludeAnnotatedClasses: ''
+    excludeAnnotatedClasses: []
     allowVars: false
   UseIfInsteadOfWhen:
     active: true
@@ -611,5 +861,17 @@ style:
     active: true
   WildcardImport:
     active: true
-    excludes: '**/test/**,**/spekTest/**,**/integrationTest/**,**/robolectricTest/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt'
-    excludeImports: 'java.util.*,kotlinx.android.synthetic.*'
+    excludes: [
+      '**/test/**',
+      '**/spekTest/**',
+      '**/integrationTest/**',
+      '**/robolectricTest/**',
+      '**/androidTest/**',
+      '**/*.Test.kt',
+      '**/*.Spec.kt',
+      '**/*.Spek.kt'
+    ]
+    excludeImports: [
+      'java.util.*',
+      'kotlinx.android.synthetic.*'
+    ]
